# neural-network-cpp

./: CMakeLists.txt  README.md  csv.cpp  csv.hpp  digit_templates.txt  main.cpp  neural_network.cpp  neural_network.hpp  utils.cpp  utils.hpp
